--- a/packedgo/front-angular/src/app/features/customer/event-detail/event-detail.component.html
+++ b/packedgo/front-angular/src/app/features/customer/event-detail/event-detail.component.html
@@ -37,7 +37,11 @@
         <div class="event-meta">
           <div class="meta-item">
             <i class="bi bi-calendar-event"></i>
-            <span>{{ event.eventDate | date: 'dd/MM/yyyy HH:mm' }}</span>
+            <span>Inicio: {{ event.startTime | date: 'dd/MM/yyyy HH:mm' }}</span>
+          </div>
+          <div class="meta-item">
+            <i class="bi bi-calendar-check"></i>
+            <span>Fin: {{ event.endTime | date: 'dd/MM/yyyy HH:mm' }}</span>
           </div>
           <div class="meta-item">
             <i class="bi bi-geo-alt-fill"></i>
