--- a/packedgo/front-angular/src/app/features/customer/order-success/order-success.component.html
+++ b/packedgo/front-angular/src/app/features/customer/order-success/order-success.component.html
@@ -106,7 +106,11 @@
               </div>
               <div class="info-row">
                 <span class="label">Ubicación:</span>
-                <span class="value">{{ ticket.eventLocation }}</span>
+                <span 
+                  class="value location-link" 
+                  (click)="openTicketLocation(ticket)">
+                  {{ ticket.eventLocationName || ticket.eventLocation }}
+                </span>
               </div>
             </div>
 
